examples/test/testpolicy8179.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8179
  namespace: namespace386
spec:
  podSelector:
    matchLabels:
      key30: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value38
          key37: value22
          key26: value44
      podSelector:
        matchLabels:
          key49: value0
          key2: value27
